# Django_MiniBLOG

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  nginx.conf  pipdepth.txt  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  service.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_profile_followers_follower.py  0002_rename_birth_date_profile_birthday_and_more.py
blog/: admin.py  forms.py  models.py  service.py  tests.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_head_image.py  0002_post_deleted_at_post_is_deleted.py  0002_remove_notification_user_delete_bookmark_and_more.py  0002_remove_post_author_username_comment_level.py  0003_comment_is_removed.py  0003_delete_profile.py  0003_profile.py  0003_remove_comment_level.py  0004_delete_comment.py  0004_remove_profile_birth_date_remove_profile_location_and_more.py  0005_remove_post_birthday_remove_post_location_and_more.py  0005_remove_tag_created_at_remove_tag_is_public_and_more.py  0006_remove_category_created_at_remove_category_is_public_and_more.py  0006_remove_profile_profile_photo_profile_birth_date_and_more.py  0007_post_birthday_post_location.py  0007_post_deleted_at_post_is_deleted.py  0008_alter_post_content.py  0008_pageview.py  0009_alter_post_content.py  0009_delete_pageview.py  0010_category_deleted_at_category_is_deleted_and_more.py  0011_remove_post_likes_like.py
blog_project/: asgi.py  settings.py  urls.py  wsgi.py
chat/: consumers.py  forms.py  models.py  routing.py  service.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_message_options_remove_message_read_by_and_more.py  0002_remove_message_is_read_alter_message_sender.py
comments/: forms.py  models.py  service.py  tests.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_deleted_at_comment_is_deleted.py  0003_remove_comment_is_removed_remove_comment_likes.py  0004_remove_comment_parent_comment_comment_is_reply_reply.py  0006_remove_comment_parent_comment_reply.py  (+8 more)
direct_messages/: forms.py  models.py  urls.py  views.py
(+107 files in other folders)
