[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Choi9912 <vkvkdl23@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
absl-py = "2.1.0"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
asgiref = "3.8.1"
astunparse = "1.6.3"
attrs = "24.2.0"
black = "24.8.0"
bleach = "6.1.0"
certifi = "2024.7.4"
cffi = "1.17.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "43.0.0"
django = "5.0"
django-allauth = "64.1.0"
django-appconf = "1.0.6"
django-bootstrap4 = "24.3"
django-imagekit = "5.0.0"
django-js-asset = "2.2.0"
django-mdeditor = "0.1.20"
django-stubs = "5.0.4"
django-stubs-ext = "5.0.4"
django-summernote = "0.8.20.0"
django-tinymce = "4.1.0"
django-widget-tweaks = "1.5.0"
filelock = "3.15.4"
flake8 = "7.1.1"
flatbuffers = "24.3.25"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
gast = "0.6.0"
google-pasta = "0.2.0"
grpcio = "1.65.5"
h5py = "3.11.0"
idna = "3.7"
jinja2 = "3.1.4"
jpype1 = "1.5.0"
jwt = "1.3.1"
konlpy = "0.6.0"
libclang = "18.1.1"
lxml = "5.3.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
maxminddb = "2.6.2"
mccabe = "0.7.0"
mdurl = "0.1.2"
ml-dtypes = "0.4.0"
mpmath = "1.3.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
namex = "0.0.8"
networkx = "3.3"
optree = "0.12.1"
packaging = "24.1"
pathspec = "0.12.1"
pilkit = "3.0"
pillow = "10.4.0"
pipdeptree = "2.23.1"
platformdirs = "4.2.2"
protobuf = "4.25.4"
pycodestyle = "2.12.1"
pycparser = "2.22"
pyflakes = "3.2.0"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.2"
regex = "2024.7.24"
requests = "2.32.3"
rich = "13.7.1"
safetensors = "0.4.4"
setuptools = "73.0.1"
six = "1.16.0"
soupsieve = "2.6"
sqlparse = "0.5.1"
sympy = "1.13.2"
tqdm = "4.66.5"
types-pyyaml = "6.0.12.20240808"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
webencodings = "0.5.1"
werkzeug = "3.0.3"
wheel = "0.44.0"
wrapt = "1.16.0"
yarl = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"